[package]
name = "imgcompare"
version = "0.1.1"
authors = ["Mahmoud Al-Qudsi <mqudsi@neosmart.net>"]
description = "Check if two images are visuall identical."
homepage = "https://github.com/neosmart/imgcompare"
repository = "https://github.com/neosmart/imgcompare"
readme = "README.md"
keywords = ["image", "comparison", "diff"]
categories = ["command-line-utilities", "multimedia"]
license = "MIT"

[dependencies]
image = "0.14"
